@@ -2191,9 +2191,7 @@ void pl2_save_playlist ()
 						gtk_widget_show(glade_xml_get_widget(xml, "hbox5"));
 						/* ask to replace */
 						gtk_widget_set_sensitive(GTK_WIDGET(glade_xml_get_widget(xml, "pl-entry")), FALSE);
-/*						gtk_button_set_use_stock(GTK_BUTTON(glade_xml_get_widget(xml, "but_save")), GTK_STOCK_YES);	
-						gtk_button_set_use_stock(GTK_BUTTON(glade_xml_get_widget(xml, "but_cancel")), GTK_STOCK_NO);	
-*/						switch (gtk_dialog_run (GTK_DIALOG (glade_xml_get_widget (xml, "save_pl"))))
+						switch (gtk_dialog_run (GTK_DIALOG (glade_xml_get_widget (xml, "save_pl"))))
 						{
 							case GTK_RESPONSE_OK:
 								run = FALSE;
@@ -2204,9 +2202,7 @@ void pl2_save_playlist ()
 								run = TRUE;
 						}
 						/* return to stare */
-/*						gtk_button_set_use_stock(GTK_BUTTON(glade_xml_get_widget(xml, "but_save")), GTK_STOCK_SAVE);	
-						gtk_button_set_use_stock(GTK_BUTTON(glade_xml_get_widget(xml, "but_cancel")), GTK_STOCK_CANCEL);
-*/						gtk_widget_set_sensitive(GTK_WIDGET(glade_xml_get_widget(xml, "pl-entry")), TRUE);
+						gtk_widget_set_sensitive(GTK_WIDGET(glade_xml_get_widget(xml, "pl-entry")), TRUE);
 						gtk_widget_hide(glade_xml_get_widget(xml, "hbox5"));
 						
 						
